akhq-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: akhq
  labels:
    app: akhq
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
      nodePort: 30080
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: management
      nodePort: 30081
  selector:
    app: akhq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akhq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: akhq
  template:
    metadata:
      labels:
        app: akhq
    spec:
      containers:
        - name: akhq
          image: tchiotludo/akhq:latest
          ports:
            - containerPort: 8080
            - containerPort: 8081
          volumeMounts:
            - name: config-volume
              mountPath: /app/application.yml
              subPath: application.yml
      volumes:
        - name: config-volume
          configMap:
            name: akhq-config
