kafka-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-bridge-nodeport
  namespace: kafka
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      nodePort: 30083
  selector:
    strimzi.io/cluster: my-bridge
