kafka-connect.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-connect-service
spec:
  ports:
  - name: http
    port: 8083
    targetPort: 8083
  selector:
    strimzi.io/cluster: my-connect
  type: NodePort
